<resources>
    <string name="app_name">S185105 Galgeleg 2.0</string>
    <string name="home_screen">Galgeleg</string>
    <string name="imageViewStart">StartView</string>
    <string name="imageViewMain">MainView</string>

    <!-- Main Activity -->
    <string name="gameButton">SPIL</string>
    <string name="highscoreButton">HIGHSCORE</string>
    <string name="helpButton">HJÆLP</string>

    <!-- Game Activity -->
    <string name="contentDescription">GameView</string>
    <string name="guessWord">Gæt Ord&#8230;</string>
    <string name="guessButton">GÆT</string>
    <string name="game_title">Spil</string>

    <!-- Highscore Activity -->
    <string name="highscore_title">Highscore</string>
    <string name="highscore_text">Scores</string>
    <string name="listview">1.    Antal Forsøg: </string>

    <!-- Help Activity -->
    <string name="help_title">Hjælp</string>

    <!-- Won Activity -->
    <string name="won_title">Du har vundet!!</string>
    <string name="tries">Antal forsøg: </string>
    <string name="won_button">JAAAA!!</string>

    <!-- Lost Activity -->
    <string name="lost_title">Du har tabt!!</string>
    <string name="word">Ordet var: </string>
    <string name="lost_button">ØVV!!:(</string>
</resources>
